# numpy

./: .gitattributes  .gitignore  LICENSE.txt  build-variants.sh  meson.build  meson.options  pixi.toml  pyproject.toml
.github/workflows/: variant-wheels.yml  wheels.yml
meson_cpu/: get_cpu_flags.py  meson.build
meson_cpu/arm/: get_cpu_flags.py  meson.build
meson_cpu/x86/: get_cpu_flags.py  meson.build
numpy/: meson.build
tools/wheels/: cibw_before_build.sh
